tests/fixtures/LatestTests/VariableDeclarationTests/errors/uninitialized_use_before_declare_int8.fg
/; EXPECT_ERROR: VariableNotFound
print(x, "\n")
var x:int8 = 5

